namespace PortProject.Api.Domain.AppUserAggregate;
public enum Role {
    Administrator,
    PortAuthorityOfficer,
    LogisticsOperator,
    ShippingAgentRepresentative
}